--- a/AppFinanceiro/AppFinanceiro.csproj
+++ b/AppFinanceiro/AppFinanceiro.csproj
@@ -57,9 +57,14 @@
 	</ItemGroup>
 
 	<ItemGroup>
+		<PackageReference Include="LiteDB" Version="5.0.19" />
 		<PackageReference Include="Microsoft.Maui.Controls" Version="$(MauiVersion)" />
 		<PackageReference Include="Microsoft.Maui.Controls.Compatibility" Version="$(MauiVersion)" />
 		<PackageReference Include="Microsoft.Extensions.Logging.Debug" Version="8.0.0" />
+	</ItemGroup>
+
+	<ItemGroup>
+	  <ProjectReference Include="..\AppFinanceiro.Core\AppFinanceiro.Core.csproj" />
 	</ItemGroup>
 
 </Project>
