--- a/AppFinanceiro.Dal/AppFinanceiro.Dal.csproj
+++ b/AppFinanceiro.Dal/AppFinanceiro.Dal.csproj
@@ -10,4 +10,8 @@
     <ProjectReference Include="..\AppFinanceiro.Core\AppFinanceiro.Core.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="LiteDB" Version="5.0.19" />
+  </ItemGroup>
+
 </Project>
