Implementações iniciais da tela de cadastro de contas

--- a/AppFinanceiro/AppFinanceiro.csproj
+++ b/AppFinanceiro/AppFinanceiro.csproj
@@ -65,6 +65,19 @@
 
 	<ItemGroup>
 	  <ProjectReference Include="..\AppFinanceiro.Core\AppFinanceiro.Core.csproj" />
+	  <ProjectReference Include="..\AppFinanceiro.Dal\AppFinanceiro.Dal.csproj" />
+	</ItemGroup>
+
+	<ItemGroup>
+	  <MauiXaml Update="Views\Transaction\TransactionAdd.xaml">
+	    <Generator>MSBuild:Compile</Generator>
+	  </MauiXaml>
+	  <MauiXaml Update="Views\Transaction\TransactionEdit.xaml">
+	    <Generator>MSBuild:Compile</Generator>
+	  </MauiXaml>
+	  <MauiXaml Update="Views\Transaction\TransactionList.xaml">
+	    <Generator>MSBuild:Compile</Generator>
+	  </MauiXaml>
 	</ItemGroup>
 
 </Project>
