--- a/AppFinanceiro.Application/AppFinanceiro.Application.csproj
+++ b/AppFinanceiro.Application/AppFinanceiro.Application.csproj
@@ -6,4 +6,8 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\AppFinanceiro.Core\AppFinanceiro.Core.csproj" />
+  </ItemGroup>
+
 </Project>
